--- a/styles/scss/variables.scss
+++ b/styles/scss/variables.scss
@@ -37,6 +37,7 @@ $line-heigth: (
 $x-black: #08020D;
 $x-white: #FFFFFF;
 $x-light-grey: #808080;
+$x-grey: #8C8C8C;
 $x-asphalt-grey: #3C3B3D;
 $x-salat-green: #34C176;
 $x-malina-red: #FF4157;
@@ -52,6 +53,7 @@ $palette-background-secondary: $x-lenear-gradient;
 
 $palette-text-primary: $x-white;
 $palette-text-secondary: $x-peal-white;
+$palette-text-news: $x-grey;
 
 $palette-button-access: $x-salat-green;
 $palette-button-download-app: $x-malina-red;
