--- a/styles/style.css
+++ b/styles/style.css
@@ -22,7 +22,7 @@ input[type=text]::-webkit-input-placeholder {
   margin: auto;
   max-width: 1200px;
 }
-@media (max-width: 1280px) {
+@media (min-width: 320px) {
   .wrapper {
     width: 87%;
   }
@@ -606,16 +606,18 @@ input[type=text]::-webkit-input-placeholder {
 .c-b-popular-tracks__sec--flex {
   font-size: 14px;
   display: flex;
+  justify-content: flex-start;
   align-items: center;
 }
 .c-b-popular-tracks__sec--img {
   height: 50px;
+  width: 50px;
   margin-right: 10px;
 }
 .c-b-popular-tracks__sec--img > img {
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  object-fit: cover;
 }
 @media (min-width: 768px) {
   .c-b-popular-tracks__sec--img {
@@ -737,25 +739,13 @@ input[type=text]::-webkit-input-placeholder {
 
 .b-similiar-artists__artist--standart {
   height: 250px;
-  width: 130px;
+  width: 120px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   margin: auto;
   font-size: 16px;
   line-height: 150%;
-}
-@media (min-width: 768px) {
-  .b-similiar-artists__artist--standart {
-    height: 270px;
-    width: 150px;
-  }
-}
-@media (min-width: 1280px) {
-  .b-similiar-artists__artist--standart {
-    height: 340px;
-    width: 220px;
-  }
 }
 
 .b-similiar-artists__avatar--standart {
@@ -769,14 +759,14 @@ input[type=text]::-webkit-input-placeholder {
 }
 @media (min-width: 768px) {
   .b-similiar-artists__avatar--standart {
-    height: 180px;
-    width: 180px;
+    height: 160px;
+    width: 160px;
   }
 }
 @media (min-width: 1280px) {
   .b-similiar-artists__avatar--standart {
-    height: 200px;
-    width: 200px;
+    height: 180px;
+    width: 180px;
   }
 }
 
